[tool.poetry]
name = "biot"
version = "0.1.0"
description = ""
authors = ["Bob Hong <bhong@plex.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^13.13.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
